# execution-engine

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  Dockerfile  README.md  Taskfile.yml  constraints.txt  docker-compose.override.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: AGENT_HANDOFF.md  DESIGN.md  DEVELOPMENT.md  OPERATIONS.md  PLANS.md  QUALITY_SCORE.md  RELIABILITY.md  index.md  security-model.md
docs/contracts/: README.md  manifest.json
docs/design-docs/: core-beliefs.md  index.md  tool-evidence-ledger.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: component-charter.md  index.md
docs/references/: index.md
execution_engine/: app.py  approval_summary.py  config.py  durability.py  examples.py  gateway_client.py  internal_transport.py  models.py  orchestrator_client.py  outbound_tls.py  readiness.py  reasoning_summary_events.py  run_registry.py  serve.py  skill_constants.py  target_types.py  worker.py  worker_fallbacks.py  worker_run_support.py  worker_tool_artifacts.py  worker_tool_authority.py  worker_tool_sanitizer.py
execution_engine/agent/: assistant_reference_context.py  engine.py  react_engine.py  remediation_verification.py  (+4 more)
scripts/: check-contracts.py  check-harness.py  check-python-version.py
tests/: harness_gateway.py  harness_orchestrator.py  test_integration.py  test_remediation.py  test_resource_bindings.py  test_supporting_components.py  test_tool_context.py  test_unit.py  test_worker_approval_resume.py  test_worker_fallback.py
(+15 files in other folders)
